# pulmocare-python-microservices-backend

./: .env  .gitignore  Jenkinsfile  Makefile  README.md  app.py  architecture-analysis.mmd  architecture-improvements.mmd  docker-compose.yml  microservices.mmd  migrate.ps1  migrate.sh  models.py  requirements.txt  sonar-project.properties  test_integration.py
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: backend-tests.yml  container-tests.yml  integration-tests.yml
ansible/: IMPLEMENTATION_SUMMARY.md  README.md  ansible.cfg  inventory.yml
ansible/playbooks/: build-and-deploy.yml  create-microservice.yml  list-services.yml  remove-service.yml  setup-infrastructure.yml
ansible/vars/: services.yml
config/apisix/: Dockerfile  apisix.yaml  config.yaml  entrypoint.sh  import-routes.sh  secrets-manager.sh  setup.py
config/apisix-dashboard/: Dockerfile  conf.yaml
config/consul/: apisix-dashboard.json  apisix.json  auth.json  etcd.json  grafana.json  jenkins.json  keycloak-db.json  keycloak.json  kong-database.json  kong-gateway.json  local.json  loki.json  medecins.json  mongodb.json  ordonnances.json  otel-collector.json  patients.json  portainer.json  prometheus.json  rabbitmq.json  radiologues.json  redis.json  reports.json  sonarqube.json  tempo.json
config/keycloak/: medapp-realm.json  pulmocare-realm.json
config/kong/: Dockerfile  kong.conf  kong.yaml  kong.yml  start-kong.sh
data/mongodb/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-5978282280019298059.wt  collection-0-8779818489973600660.wt  collection-0-8878308350953480639.wt  collection-2-8779818489973600660.wt  collection-4-8779818489973600660.wt  collection-7-8779818489973600660.wt  index-1-5978282280019298059.wt  index-1-8779818489973600660.wt  index-1-8878308350953480639.wt  index-3-8779818489973600660.wt  index-5-8779818489973600660.wt  index-6-8779818489973600660.wt  index-8-8779818489973600660.wt  index-9-8779818489973600660.wt  sizeStorer.wt
data/redis/: dump.rdb
docs/: tasks.md
generators/: Cargo.toml  README.md  run_all.bat  run_all.sh
generators/src/: lib.rs
k8s/: COMPARISON.md  QUICKSTART.md  README.md  SUMMARY.md  build-images.sh  cleanup.sh  configmap.yaml  deploy.sh  ingress.yaml  namespace.yaml  secrets.yaml
k8s/infrastructure/: apisix.yaml  consul.yaml  etcd.yaml  keycloak.yaml  minio.yaml  mongodb.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml  vault.yaml
k8s/monitoring/: grafana.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml  (+1 more)
kubernetes/: namespaces.yaml
registry/: IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.local.yml  docker-compose.simple.yml  docker-compose.yml  local-registry.yaml  prometheus.yml  registry-cli  setup-registry.sh
services/appointments/app/: .env.development  .env.production  app.py  config.py  consumer.py  pyproject.toml
services/appointments/app/middleware/: auth_middleware.py
services/appointments/app/models/: appointment.py
services/appointments/app/routes/: appointments.py  health.py  integration.py  scheduling.py
services/appointments/app/services/: appointment_service.py  cache_service.py  circuit_breaker.py  doctor_service.py  logger_service.py  medecin_service.py  metrics.py  metrics_service.py  mongodb_client.py  patient_service.py  prescription_service.py  rabbitmq_client.py  radiology_service.py  redis_client.py  tracing_service.py
services/auth/app/: .env.development  .env.production  README.md  app.py  config.py  pyproject.toml  test.py
services/auth/app/middleware/: keycloak_auth.py
services/auth/app/models/: auth.py
services/auth/app/routes/: auth_routes.py  integration_routes.py
services/auth/app/services/: auth_client.py  keycloak_service.py  token_provider.py
services/auth/app/setup/: configure_keycloak.py
services/medfiles/app/: app.py  config.py  pyproject.toml
services/medfiles/app/models/: file_models.py
services/medfiles/app/services/: auth_service.py  logger_service.py  minio_service.py
services/ordonnances/app/: .env.development  .env.production  app.py  config.py  consul_service.py  consumer.py  database.py  health_check.py  main.py  metrics.py  pdf_service.py  pyproject.toml
services/ordonnances/app/auth/: jwt_auth.py  keycloak_auth.py
services/ordonnances/app/dbconfig/: db.py
services/ordonnances/app/decorator/: health_check.py
services/ordonnances/app/models/: api_models.py  ordonnance.py
services/ordonnances/app/routes/: integration_routes.py  ordonnance_routes.py
services/ordonnances/app/services/: logger_service.py  message_consumer.py  metrics.py  mongodb_client.py  pdf_service.py  prometheus_service.py  rabbitmq_client.py  report_service.py  tracing_service.py
services/patients/app/: .env.development  .env.production  app.py  base_consul_service.py  config.py  consul_service.py  consumer.py  debug_models.py  health_check.py  metrics.py  models.py  pyproject.toml
services/patients/app/auth/: keycloak_auth.py
services/patients/app/decorator/: health_check.py
services/patients/app/models/: api_models.py  patient.py  patient_model.py  product.py
services/patients/app/routes/: integration_routes.py  patients_routes.py  product_routes.py
services/patients/app/services/: consul_service.py  logger_service.py  metrics.py  mongodb_client.py  prometheus_service.py  rabbitmq_client.py  redis_client.py  tracing_service.py
services/reports/app/: .env.development  .env.production  app.py  circuit_breaker.py  config.py  consumer.py  message_broker.py  pyproject.toml  report_generator.py  schema.py  scraper.py  xray_analyzer.py  xray_processor.py
services/reports/app/auth/: keycloak_auth.py
services/reports/app/decorator/: health_check.py
services/reports/app/routes/: integration_routes.py
services/reports/app/services/: consul_service.py  log_filters.py  logger_service.py  message_consumer.py  metrics.py  mongodb_client.py  prometheus_service.py  rabbitmq_client.py  report_service.py  tracing_service.py
test_data/: doctors.json  patients.json  prescriptions.json  radiology_requests.json  reports.json
(+424 files in other folders)
