[package]
name = "medapp-generators"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
mongodb = "2.6.0"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3.28"
rand = "0.8.5"
fake = { version = "2.6", features = ["derive", "chrono"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
bcrypt = "0.14.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
indicatif = "0.17.3"

[[bin]]
name = "medecins_generator"
path = "src/bin/medecins.rs"

[[bin]]
name = "patients_generator"
path = "src/bin/patients.rs"

[[bin]]
name = "radiologues_generator"
path = "src/bin/radiologues.rs"

[[bin]]
name = "ordonnances_generator"
path = "src/bin/ordonnances.rs"

[[bin]]
name = "reports_generator"
path = "src/bin/reports.rs"
