[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "aiohappyeyeballs==2.4.6 ; python_full_version >= '3.10' and python_full_version < '4'",
    "aiosignal==1.3.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "altair==5.5.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "annotated-types==0.7.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "anyio==4.8.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "asgiref==3.8.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "async-timeout==4.0.3 ; python_full_version == '3.10.*'",
    "attrs==25.1.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "backoff==2.2.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "bcrypt==4.0.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "beautifulsoup4==4.9.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "blinker==1.9.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "build==1.2.2.post1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "cachetools==5.5.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "certifi==2025.1.31 ; python_full_version >= '3.10' and python_full_version < '4'",
    "cffi==1.17.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "chardet==5.2.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "charset-normalizer==3.4.4; python_full_version >= '3.10' and python_full_version < '4'",
    "click==8.1.8 ; python_full_version >= '3.10' and python_full_version < '4'",
    "colorama==0.4.6 ; (python_full_version >= '3.10' and python_full_version < '4' and os_name == 'nt') or (python_full_version >= '3.10' and python_full_version < '4' and sys_platform == 'win32')",
    "coloredlogs==15.0.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "cryptography==44.0.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "dataclasses-json==0.6.7 ; python_full_version >= '3.10' and python_full_version < '4'",
    "deprecated==1.2.18 ; python_full_version >= '3.10' and python_full_version < '4'",
    "durationpy==0.9 ; python_full_version >= '3.10' and python_full_version < '4'",
    "emoji==2.14.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "eval-type-backport==0.2.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "exceptiongroup==1.2.2 ; python_full_version == '3.10.*'",
    "fastapi==0.115.12 ; python_full_version >= '3.10' and python_full_version < '4'",
    "fastapi[standard]==0.115.12",
    "filelock==3.17.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "filetype==1.2.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "firecrawl-py==1.11.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "flatbuffers==25.2.10 ; python_full_version >= '3.10' and python_full_version < '4'",
    "frozenlist==1.5.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "fsspec==2025.2.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "gitdb==4.0.12 ; python_full_version >= '3.10' and python_full_version < '4'",
    "gitpython==3.1.44 ; python_full_version >= '3.10' and python_full_version < '4'",
    "google-auth==2.38.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "googleapis-common-protos==1.66.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "greenlet==3.1.1 ; (python_full_version >= '3.10' and python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version >= '3.10' and python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version >= '3.10' and python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version >= '3.10' and python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version >= '3.10' and python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version >= '3.10' and python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version >= '3.10' and python_full_version < '3.14' and platform_machine == 'x86_64')",
    "grpcio==1.70.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "h11==0.16.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "html5lib==1.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "httptools==0.6.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "httpx==0.28.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "httpx-sse==0.4.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "huggingface-hub==0.28.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "humanfriendly==10.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "idna==3.10 ; python_full_version >= '3.10' and python_full_version < '4'",
    "importlib-metadata==8.5.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "importlib-resources==6.5.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "jinja2==3.1.5 ; python_full_version >= '3.10' and python_full_version < '4'",
    "joblib==1.4.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "jsonpatch==1.33 ; python_full_version >= '3.10' and python_full_version < '4'",
    "jsonpath-python==1.0.6 ; python_full_version >= '3.10' and python_full_version < '4'",
    "jsonpointer==3.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "jsonschema==4.23.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "jsonschema-specifications==2024.10.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "kubernetes==32.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "langchain==0.3.18 ; python_full_version >= '3.10' and python_full_version < '4'",
    "langchain-community==0.3.17 ; python_full_version >= '3.10' and python_full_version < '4'",
    "langchain-core==0.3.34 ; python_full_version >= '3.10' and python_full_version < '4'",
    "langchain-ollama==0.2.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "langchain-text-splitters==0.3.6 ; python_full_version >= '3.10' and python_full_version < '4'",
    "langdetect==1.0.9 ; python_full_version >= '3.10' and python_full_version < '4'",
    "langsmith==0.3.8 ; python_full_version >= '3.10' and python_full_version < '4'",
    "lxml==5.3.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "markdown==3.7 ; python_full_version >= '3.10' and python_full_version < '4'",
    "markdown-it-py==3.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "markupsafe==3.0.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "marshmallow==3.26.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "mdurl==0.1.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "mmh3==5.1.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "monotonic==1.6 ; python_full_version >= '3.10' and python_full_version < '4'",
    "mpmath==1.3.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "multidict==6.1.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "mypy-extensions==1.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "narwhals==1.26.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "nest-asyncio==1.6.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "nltk==3.9.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "numpy==1.26.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "oauthlib==3.2.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "olefile==0.47 ; python_full_version >= '3.10' and python_full_version < '4'",
    "ollama==0.4.7 ; python_full_version >= '3.10' and python_full_version < '4'",
    "onnxruntime==1.20.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opencv-python-headless==4.8.1.78",
    "opentelemetry-api==1.31.0",
    "opentelemetry-api==1.31.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-exporter-otlp==1.31.0",
    "opentelemetry-exporter-otlp-proto-common==1.31.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-exporter-otlp-proto-grpc==1.31.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.31.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-exporter-otlp-proto-http==1.31.0",
    "opentelemetry-exporter-otlp-proto-http==1.31.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-exporter-prometheus==0.52b0",
    "opentelemetry-exporter-prometheus==0.52b0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-instrumentation==0.52b0",
    "opentelemetry-instrumentation-asgi==0.52b0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-instrumentation-fastapi==0.52b0",
    "opentelemetry-instrumentation-fastapi==0.52b0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-instrumentation-flask==0.52b0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-instrumentation-grpc==0.52b0",
    "opentelemetry-instrumentation-grpc==0.52b0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-instrumentation-pymongo==0.52b0",
    "opentelemetry-instrumentation-pymongo==0.52b0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-instrumentation-redis==0.52b0",
    "opentelemetry-instrumentation-redis==0.52b0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-instrumentation-requests==0.52b0",
    "opentelemetry-instrumentation-requests==0.52b0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-proto==1.31.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "opentelemetry-sdk==1.31.0",
    "opentelemetry-semantic-conventions==0.52b0",
    "opentelemetry-util-http==0.52b0",
    "orjson==3.10.15 ; python_full_version >= '3.10' and python_full_version < '4'",
    "overrides==7.7.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "packaging==24.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pandas==2.2.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pdfkit==1.0.0",
    "pika==1.3.1",
    "pillow==10.3.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "posthog==3.12.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "prometheus-client==0.17.1",
    "propcache==0.2.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "protobuf>=5.0.0,<6.0.0",
    "psutil>=6.1.1",
    "psutil==6.1.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyarrow>=4.0.0,<19.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyasn1==0.6.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyasn1-modules==0.4.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pycparser==2.22 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pydantic==2.10.6 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pydantic-core==2.27.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pydantic-settings==2.7.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pydeck==0.9.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pydicom==2.4.3",
    "pygments==2.19.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyjwt==2.6.0",
    "pymongo==4.6.3",
    "pypdf==6.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pypdf2>=2.0.0",
    "pypika==0.48.9 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyproject-hooks==1.2.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyreadline3==3.5.4 ; python_full_version >= '3.10' and python_full_version < '4' and sys_platform == 'win32'",
    "pytesseract==0.3.8 ; python_full_version >= '3.10' and python_full_version < '4'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "python-dotenv==1.0.1",
    "python-dotenv==1.0.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "python-iso639==2025.2.8 ; python_full_version >= '3.10' and python_full_version < '4'",
    "python-json-logger==2.0.7",
    "python-magic==0.4.27 ; python_full_version >= '3.10' and python_full_version < '4'",
    "python-oxmsg==0.0.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pytz==2025.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "pyyaml==6.0.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "rapidfuzz==3.12.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "redis==5.2.1",
    "referencing==0.36.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "regex==2024.11.6 ; python_full_version >= '3.10' and python_full_version < '4'",
    "reportlab==4.0.7",
    "requests==2.32.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "requests-oauthlib==2.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "requests-toolbelt==1.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "rich==13.9.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "rpds-py==0.22.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "rsa==4.9 ; python_full_version >= '3.10' and python_full_version < '4'",
    "schedule==1.1.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "scikit-learn==1.5.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "scikit-learn>=1.0.0",
    "shellingham==1.5.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "six==1.17.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "smmap==5.0.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sniffio==1.3.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "soupsieve==2.6 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sqlalchemy==2.0.38 ; python_full_version >= '3.10' and python_full_version < '4'",
    "streamlit==1.42.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "sympy==1.13.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "tenacity==9.0.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "tokenizers==0.21.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "toml==0.10.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "tomli==2.2.1 ; python_full_version == '3.10.*'",
    "tornado==6.5 ; python_full_version >= '3.10' and python_full_version < '4'",
    "tqdm==4.67.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "typer==0.15.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "typing-inspect==0.9.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "tzdata==2025.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "unstructured-client==0.29.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "unstructured[md]==0.16.20 ; python_full_version >= '3.10' and python_full_version < '4'",
    "urllib3==2.5.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "uvicorn[standard]==0.34.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "uvloop==0.21.0 ; python_full_version >= '3.10' and python_full_version < '4' and platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchdog==6.0.0 ; python_full_version >= '3.10' and python_full_version < '4' and sys_platform != 'darwin'",
    "watchfiles==1.0.4 ; python_full_version >= '3.10' and python_full_version < '4'",
    "webencodings==0.5.1 ; python_full_version >= '3.10' and python_full_version < '4'",
    "websocket-client==1.8.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "websockets==14.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "werkzeug>=2.0.0",
    "wrapt==1.17.2 ; python_full_version >= '3.10' and python_full_version < '4'",
    "yarl==1.18.3 ; python_full_version >= '3.10' and python_full_version < '4'",
    "zipp==3.21.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "zstandard==0.23.0 ; python_full_version >= '3.10' and python_full_version < '4'",
    "schedule==1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
target-version = "py312"
line-length = 200

[tool.ruff.lint]
select = [
    "E",   
    "W",   
    "F",   
    "I",   
    "UP",  
    "B",   
    "S",    
    "C4",  
    "DTZ",  
    "T20",  
    "ASYNC",
    "BLE",  
    "PL",   
    "RUF", 
]

ignore = [
    "S101",
    "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = ["medrax"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false